--- a/views/template.html
+++ b/views/template.html
@@ -10,10 +10,10 @@
     <title>Offcanvas template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./template_files/bootstrap.min.css" rel="stylesheet">
+    <link href="./bootstrap/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./template_files/offcanvas.css" rel="stylesheet">
+    <link href="./css/offcanvas.css" rel="stylesheet">
   </head>
 
   <body class="bg-light">
@@ -73,7 +73,7 @@
 
     <main role="main" class="container">
       <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded box-shadow">
-        <img class="mr-3" src="./template_files/bootstrap-outline.svg" alt="" width="48" height="48">
+        <img class="mr-3" src="./bootstrap/bootstrap-outline.svg" alt="" width="48" height="48">
         <div class="lh-100">
           <h6 class="mb-0 text-white lh-100">Bootstrap</h6>
           <small>Since 2011</small>
@@ -152,9 +152,9 @@
     <script src="./template_files/jquery-3.2.1.slim.min.js.download" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="./template_files/popper.min.js.download"></script>
-    <script src="./template_files/bootstrap.min.js.download"></script>
-    <script src="./template_files/holder.min.js.download"></script>
-    <script src="./template_files/offcanvas.js.download"></script>
+    <script src="./bootstrap/bootstrap.min.js.download"></script>
+    <script src="./js/holder.min.js.download"></script>
+    <script src="./js/offcanvas.js.download"></script>
   
 
 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" preserveAspectRatio="none" style="display: none; visibility: hidden; position: absolute; top: -100%; left: -100%;"><defs><style type="text/css"></style></defs><text x="0" y="2" style="font-weight:bold;font-size:2pt;font-family:Arial, Helvetica, Open Sans, sans-serif">32x32</text></svg></body></html>
