Removed extra components that were ugly and changed naming to fit the Tripada brand.

--- a/views/template.html
+++ b/views/template.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0053)https://getbootstrap.com/docs/4.0/examples/offcanvas/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+  <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="https://getbootstrap.com/favicon.ico">
 
-    <title>Offcanvas template for Bootstrap</title>
+    <title>Tripada</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -18,70 +19,45 @@
 
   <body class="bg-light">
 
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
-      <a class="navbar-brand" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Offcanvas navbar</a>
-      <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-purple">
+      <a class="navbar-brand" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Tripada</a>
+      
 
       <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Dashboard <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="">Dashboard <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Notifications</a>
+            <a class="nav-link" href="">Discover</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Switch account</a>
+            <a class="nav-link" href="">Trips</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com/" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Settings</a>
+            <a class="nav-link dropdown-toggle" href="" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Settings</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Action</a>
-              <a class="dropdown-item" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Another action</a>
-              <a class="dropdown-item" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Something else here</a>
+              <a class="dropdown-item" href="">Profile</a>
+              <a class="dropdown-item" href="">Account</a>
+              <a class="dropdown-item" href="">Log Out</a>
             </div>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </div>
     </nav>
 
-    <div class="nav-scroller bg-white box-shadow">
-      <nav class="nav nav-underline">
-        <a class="nav-link active" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Dashboard</a>
-        <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">
-          Friends
-          <span class="badge badge-pill bg-light align-text-bottom">27</span>
-        </a>
-        <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Explore</a>
-        <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Suggestions</a>
-        <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Link</a>
-        <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Link</a>
-        <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Link</a>
-        <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Link</a>
-        <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Link</a>
-      </nav>
-    </div>
-
     <main role="main" class="container">
       <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded box-shadow">
+        <!-- This image tag should be where our logo (once we get one) goes -->
         <img class="mr-3" src="./bootstrap/bootstrap-outline.svg" alt="" width="48" height="48">
         <div class="lh-100">
-          <h6 class="mb-0 text-white lh-100">Bootstrap</h6>
-          <small>Since 2011</small>
+          <h6 class="mb-0 text-white lh-100">Explore</h6>
+          <small>Since 2018</small>
         </div>
       </div>
 
       <div class="my-3 p-3 bg-white rounded box-shadow">
-        <h6 class="border-bottom border-gray pb-2 mb-0">Recent updates</h6>
+        <h6 class="border-bottom border-gray pb-2 mb-0">New trips</h6>
         <div class="media text-muted pt-3">
           <img data-src="holder.js/32x32?theme=thumb&amp;bg=007bff&amp;fg=007bff&amp;size=1" alt="32x32" class="mr-2 rounded" style="width: 32px; height: 32px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2232%22%20height%3D%2232%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1649b20598b%20text%20%7B%20fill%3A%23007bff%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A2pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1649b20598b%22%3E%3Crect%20width%3D%2232%22%20height%3D%2232%22%20fill%3D%22%23007bff%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2211.546875%22%20y%3D%2216.9%22%3E32x32%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
           <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
