Added Create Trip button in navigation bar.

--- a/views/template.html
+++ b/views/template.html
@@ -42,6 +42,7 @@
               <a class="dropdown-item" href="">Log Out</a>
             </div>
           </li>
+          <button class="new-trip" href="./form.html" id="new-trip">Create Trip</button>
         </ul>
       </div>
     </nav>
