--- a/views/form.html
+++ b/views/form.html
@@ -26,7 +26,7 @@
       </div>
       <div class="row">
         <div class="col-md-8 order-md-1">
-          <form class="needs-validation" novalidate="">
+          <form class="needs-validation" novalidate="" action="/formSubmit" method="POST">
             <div class="mb-3">
               <label for="username">Username</label>
               <div class="input-group">
@@ -114,22 +114,6 @@
                 <input type="number" class="form-control" id="Miscellaneous" placeholder="">
               </div>
             </div>
-
-            <hr class="mb-4">
-
-          <!-- Media content -->
-            <div class="mb-3">
-              <h4 class="mb-3">Media Content</h4>
-              <!-- Images -->
-              <label for="Images">Images</label>
-                <input type="image" class="form-control" id="Images" placeholder="">
-              </div>
-            </div>
-
-            <form action="upload.php" method="post" enctype="multipart/form-data">
-            <input type="file" name="fileToUpload" id="fileToUpload">
-            <input type="submit" value="Upload Image" name="submit">
-            </form>
             <hr class="mb-4">
 
           <!-- Submit button for form -->
