Moved changes to template.ejs

--- a/public/css/offcanvas.css
+++ b/public/css/offcanvas.css
@@ -71,6 +71,8 @@ body {
 
 .bg-purple { background-color: var(--purple); }
 
+.bg-blue { background-color: #659dbd; }
+
 .border-bottom { border-bottom: 1px solid #e5e5e5; }
 
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
