Changed official title to Tripadeaux.

--- a/views/template.ejs
+++ b/views/template.ejs
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="https://getbootstrap.com/favicon.ico">
 
-    <title>Tripada</title>
+    <title>Tripadeaux</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
   <body class="bg-light">
 
     <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-blue">
-      <a class="navbar-brand" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Tripada</a>
+      <a class="navbar-brand" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/#">Tripadeaux</a>
       
 
       <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
