--- a/views/form.ejs
+++ b/views/form.ejs
@@ -7,13 +7,13 @@
     <meta name="author" content="">
     <link rel="icon" href="https://getbootstrap.com/favicon.ico">
 
-    <title>Checkout example for Bootstrap</title>
+    <title>Tripadux - Trip Post Form</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./form-validation.css" rel="stylesheet">
+    <link href="./css/form-validation.css" rel="stylesheet">
   </head>
 
   <body class="bg-light" data-gr-c-s-loaded="true">
@@ -26,70 +26,60 @@
       </div>
       <div class="row">
         <div class="col-md-8 order-md-1">
-          <form class="needs-validation" novalidate="">
-            <div class="mb-3">
-              <label for="username">Username</label>
+          <form class="needs-validation" novalidate="" action="/formSubmit" method="POST">
+  
+          <!--  Destination Information-->
+            <h4 class="mb-3">Destination Infomation</h4>
+            <!--  Trip title -->
+            <div class="mb-3 centered">
+              <label for="title"><strong>Trip Title</strong> - Make it exciting!</label>
               <div class="input-group">
-                <input type="text" class="form-control" id="username" placeholder="Username" required="">
-                <div class="invalid-feedback" style="width: 100%;">
-                  Your username is required.
-                </div>
+                <input type="text" class="form-control" id="destination" placeholder="Shark Skydiving Adventure at Australia">
               </div>
-            </div>
+
+            </div> 
+            <!--  Destination -->
             <div class="mb-3">
-              <label for="username">Username</label>
+              <label for="destination"><strong>Destination</strong> - Where did you go first?</label>
               <div class="input-group">
-                <input type="text" class="form-control" id="username" placeholder="Username" required="">
-                <div class="invalid-feedback" style="width: 100%;">
-                  Your username is required.
-                </div>
+                <input type="text" class="form-control" id="destination" placeholder="Paris, France">
               </div>
-            </div>
+            </div> 
+             <!-- Countries Visited -->
             <div class="mb-3">
-              <label for="username">Username</label>
+              <label for="countries"><strong>Countries Visited</strong> - Did you go anywhere else?</label>
               <div class="input-group">
-                <input type="text" class="form-control" id="username" placeholder="Username" required="">
-                <div class="invalid-feedback" style="width: 100%;">
-                  Your username is required.
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-5 mb-3">
-                <label for="country">Country</label>
-                <select class="custom-select d-block w-100" id="country" required="">
+                <select type="custom-select" class="form-control" id="countries">
                   <option value="">Choose...</option>
-                  <option>United States</option>
-                </select>
-                <div class="invalid-feedback">
-                  Please select a valid country.
-                </div>
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="state">State</label>
-                <select class="custom-select d-block w-100" id="state" required="">
-                  <option value="">Choose...</option>
-                  <option>California</option>
-                </select>
-                <div class="invalid-feedback">
-                  Please provide a valid state.
-                </div>
-              </div>
-              <div class="col-md-3 mb-3">
-                <label for="zip">Zip</label>
-                <input type="text" class="form-control" id="zip" placeholder="" required="">
-                <div class="invalid-feedback">
-                  Zip code required.
-                </div>
+                  <option>Paris</option>
+                </select> 
               </div>
             </div>
+            <!-- Cities Visited -->
+            <div class="mb-3">
+              <label for="cities"><strong>Cities Visited </strong>- What about any other cities?</label>
+              <div class="input-group">
+                <select type="custom-select" class="form-control" id="countries">
+                  <option value="">Choose...</option>
+                  <option>France</option>
+                </select>
+              </div>
+            </div>
+            <!--  Trip Length -->
+            <div class="mb-3">
+              <label for="tripLength"><strong>Trip Length</strong> - How days were you having fun?</label>
+              <div class="input-group">
+                <input type="number" class="form-control" id="tripLength" placeholder="3">
+              </div>
+            </div>
+
             <hr class="mb-4">
 
           <!--  Total trip costs-->
-            <h4 class="mb-3">Cost</h4>
+            <h4 class="mb-3">Costs</h4>
             <!-- Lodging cost -->
             <div class="mb-3">
-              <label for="lodging">Lodging</label>
+              <label for="lodging"><strong>Lodging</strong></label>
               <div class="input-group">
                 <input type="number" class="form-control" id="lodging" placeholder="" required="">
                 <div class="invalid-feedback" style="width: 100%;">
@@ -99,7 +89,7 @@
             </div> 
              <!-- Food cost -->
             <div class="mb-3">
-              <label for="food">Food</label>
+              <label for="food"><strong>Food</strong></label>
               <div class="input-group">
                 <input type="number" class="form-control" id="food" placeholder="" required="">
                 <div class="invalid-feedback" style="width: 100%;">
@@ -107,30 +97,37 @@
                 </div>
               </div>
             </div>
+            <!-- Transportation cost -->
+            <div class="mb-3">
+              <label for="transporation"><strong>Transportation</strong></label>
+              <div class="input-group">
+                <input type="number" class="form-control" id="food" placeholder="" required="">
+                <div class="invalid-feedback" style="width: 100%;">
+                  Transportation cost is required.
+                </div>
+              </div>
+            </div>
             <!--  Misc. cost -->
             <div class="mb-3">
-              <label for="Miscellaneous">Miscellaneous</label>
+              <label for="miscellaneous"><strong>Miscellaneous</strong></label>
               <div class="input-group">
-                <input type="number" class="form-control" id="Miscellaneous" placeholder="">
+                <input type="number" class="form-control" id="miscellaneous" placeholder="">
               </div>
             </div>
 
             <hr class="mb-4">
 
-          <!-- Media content -->
-            <div class="mb-3">
-              <h4 class="mb-3">Media Content</h4>
-              <!-- Images -->
-              <label for="Images">Images</label>
-                <input type="image" class="form-control" id="Images" placeholder="">
+          <!--  Media Content-->
+            <!-- <h4 class="mb-3">Media Content</h4> -->
+            <!-- Images -->
+            <!-- <div class="mb-3">
+              <label for="images">Images</label>
+              <div class="input-group">
+                <input type="text" class="form-control" id="images" placeholder="" required="">
               </div>
-            </div>
+            </div>  -->
 
-            <form action="upload.php" method="post" enctype="multipart/form-data">
-            <input type="file" name="fileToUpload" id="fileToUpload">
-            <input type="submit" value="Upload Image" name="submit">
-            </form>
-            <hr class="mb-4">
+            <!-- <hr class="mb-4"> -->
 
           <!-- Submit button for form -->
             <button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
@@ -139,7 +136,7 @@
       </div>
 
       <footer class="my-5 pt-5 text-muted text-center text-small">
-        <p class="mb-1">© 2017-2018 Tripada</p>
+        <p class="mb-1">© 2017-2018 Tripadeux</p>
         <ul class="list-inline">
           <li class="list-inline-item"><a href="https://getbootstrap.com/docs/4.1/examples/checkout/#">Privacy</a></li>
           <li class="list-inline-item"><a href="https://getbootstrap.com/docs/4.1/examples/checkout/#">Terms</a></li>
@@ -151,11 +148,11 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./form-example_files/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="./js/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="./form-example_files/popper.min.js"></script>
-    <script src="./form-example_files/bootstrap.min.js"></script>
-    <script src="./form-example_files/holder.min.js"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/holder.min.js"></script>
     <script>
       // Example starter JavaScript for disabling form submissions if there are invalid fields
       (function() {
