linked button to form

--- a/views/template.ejs
+++ b/views/template.ejs
@@ -42,7 +42,10 @@
               <a class="dropdown-item" href="">Log Out</a>
             </div>
           </li>
-          <button class="new-trip" href="./form.html" id="new-trip">Create Trip</button>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="/form" class="btn btn-primary" id="new-trip">Create Trip</a>
+            </li>
         </ul>
       </div>
     </nav>
